--- a/index.html
+++ b/index.html
@@ -1,11 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <title>title</title>
-  </head>
-  <body>
-    <h1>kath's website</h1>
-    Hello world!    
+    <style>
+        h1 {
+            color: pink;
+        }
+        h2 {
+            text-align: center;
+        }
+    </style>
+</head>
+
+<body>
+    <h1>Kath's Website</h1>
+    
+    Hello world!
+
+    <h2>kath's website</h2>
+
 </body>
+
 </html>
